# cig-analyst-challenge

./: .gitignore  README.md  cig_data_challenge.ipynb  main.py  pyproject.toml  sales_data.csv
