[project]
name = "cig-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
